# AutoViralAI

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
api/: main.py  messages.py
api/routes/: __init__.py  config.py  status.py
bot/: dependencies.py  messages.py  telegram_bot.py  webhook.py
bot/handlers/: approval.py  commands.py  config_callbacks.py  status.py
config/: account_niche.yaml  settings.py
scripts/: check_health.py  init_account.py  manual_run.py  orchestrator.py  persistence.py
src/: exceptions.py  messages.py  orchestrator.py  persistence.py
src/graphs/: creation_pipeline.py  learning_pipeline.py
src/models/: __init__.py  content.py  publishing.py  research.py  state.py  strategy.py
src/nodes/: analysis.py  approval.py  generation.py  goal_check.py  learning.py  metrics.py  patterns.py  publishing.py  ranking.py  research.py  strategy.py
src/prompts/: analysis_prompts.py  extraction_prompts.py  generation_prompts.py  ranking_prompts.py  strategy_prompts.py
src/store/: knowledge_base.py  namespaces.py
src/tools/: apify_client.py  embeddings.py  hackernews_client.py  reddit_client.py  threads_api.py
tests/: conftest.py
tests/test_graphs/: test_creation_pipeline.py  test_learning_pipeline.py
tests/test_nodes/: test_approval.py  test_goal_check.py  test_learning.py  test_llm_nodes.py  test_metrics.py  test_publishing.py  test_research.py
tests/test_tools/: test_embeddings.py  test_error_paths.py  test_threads_api.py
