[project]
name = "autoviralai"
version = "0.1.0"
description = "AI agent that learns what goes viral and posts it for you. Researches content, generates posts, publishes, measures engagement, and adapts strategy automatically."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
keywords = ["langgraph", "ai-agent", "social-media", "autonomous", "self-learning", "viral-content", "threads", "growth"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langgraph>=0.3",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "apify-client>=1.6",
    "apscheduler>=3.10",
    "python-telegram-bot>=21.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "langsmith>=0.1",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "asyncpraw>=7.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100
